test/testdata/bool/invalid_property_assignment_error.lox
false.y = 1; // error: property assignment is not valid for 'bool' value
